feat(qdrant): integrate qdrant vector database with auto-initialization
Added Qdrant service to Docker Compose, implemented collection initialization script, and updated documentation.

--- a/.env.template
+++ b/.env.template
@@ -9,4 +9,6 @@ PB_ADMIN_PASSWORD=password123
 
 # Backend
 POCKETBASE_URL=http://pocketbase:8080
+QDRANT_HOST=qdrant
+QDRANT_PORT=6333
 OPENAI_API_KEY=your_key_here
