--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,24 @@ services:
       - "8000:8000"
     volumes:
       - ./backend:/app
+      - ./qdrant/collections:/app/qdrant_collections
     environment:
       - POCKETBASE_URL=http://pocketbase:8080
+      - QDRANT_HOST=qdrant
+      - QDRANT_PORT=6333
     depends_on:
       - pocketbase
+      - qdrant
+
+  qdrant:
+    image: qdrant/qdrant:latest
+    ports:
+      - "6333:6333"
+      - "6334:6334"
+    volumes:
+      - ./qdrant/storage:/qdrant/storage
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:6333/healthz"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
