feat(qdrant): add api key authentication
Secured Qdrant service with API key and updated backend client and documentation.

--- a/.env.template
+++ b/.env.template
@@ -11,4 +11,5 @@ PB_ADMIN_PASSWORD=password123
 POCKETBASE_URL=http://pocketbase:8080
 QDRANT_HOST=qdrant
 QDRANT_PORT=6333
+QDRANT_API_KEY=your_qdrant_api_key_here
 OPENAI_API_KEY=your_key_here
