--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,8 +77,9 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
             cd /root/stacks/MyMailAssistant
+            mv docker-compose.prod.yml docker-compose.yml
             echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}" > .env
-            docker compose -f docker-compose.prod.yml pull
-            docker compose -f docker-compose.prod.yml up -d
+            docker compose pull
+            docker compose up -d
             docker image prune -f
             docker builder prune -f
