--- a/pocketbase/.gitignore
+++ b/pocketbase/.gitignore
@@ -2,5 +2,7 @@ pb_data/
 pb_public/*
 !pb_public/.gitkeep
 pb_migrations/*
+!pb_migrations/*.js
+!pb_migrations/*.ts
 !pb_migrations/.gitkeep
 pocketbase
