--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: root
           key: ${{ secrets.VPS_SSH_KEY }}
-          source: "docker-compose.prod.yml,pocketbase/pb_migrations/**/*,qdrant/collections/**/*"
+          source: "docker-compose.prod.yml,pocketbase/pb_migrations/*,qdrant/collections/*"
           target: "/root/stacks/MyMailAssistant"
 
       - name: Deploy to VPS
