feat(backend): implement imap ingestor with unit tests and code quality refactor

--- a/.env.template
+++ b/.env.template
@@ -12,4 +12,6 @@ POCKETBASE_URL=http://pocketbase:8080
 QDRANT_HOST=qdrant
 QDRANT_PORT=6333
 QDRANT_API_KEY=your_qdrant_api_key_here
+SYNC_INTERVAL_SECONDS=60
+DRY_RUN=false
 OPENAI_API_KEY=your_key_here
