fix(frontend): resolve PocketBase connection issues with separate server/client URLs
- Add separate POCKETBASE_URL for server-side Docker network communication
- Use NEXT_PUBLIC_POCKETBASE_URL for client-side browser requests
- Update Dockerfile to accept build args for public URLs
- Inject VPS_HOST-based URLs at build time in GitHub Actions
- Fix ERR_CONNECTION_REFUSED by using correct endpoints for each context
- Add POCKETBASE_URL to docker-compose.yml and docker-compose.prod.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,9 @@ jobs:
           file: ./frontend/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/my-app:uma-frontend
+          build-args: |
+            NEXT_PUBLIC_POCKETBASE_URL=http://${{ secrets.VPS_HOST }}:8202
+            NEXT_PUBLIC_BACKEND_URL=http://${{ secrets.VPS_HOST }}:8201
 
       - name: Build and push Backend
         uses: docker/build-push-action@v5
