--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,6 +4,7 @@ services:
     ports:
       - "8200:3000"
     environment:
+      - POCKETBASE_URL=http://pocketbase:8080
       - NEXT_PUBLIC_POCKETBASE_URL=http://localhost:8202
       - NEXT_PUBLIC_BACKEND_URL=http://localhost:8201
     depends_on:
