--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - /app/node_modules
       - /app/.next
     environment:
+      - POCKETBASE_URL=http://pocketbase:8080
       - NEXT_PUBLIC_POCKETBASE_URL=http://localhost:8202
       - NEXT_PUBLIC_BACKEND_URL=http://localhost:8201
     depends_on:
